# Tengine_Atlas

./: CMakeLists.txt  README.md  build.sh  test.prototxt
atlas_npu/: CMakeLists.txt  atlas.cpp  main.cpp  test.sh  tlib.h
atlas_npu/ascendbase/src/Base/BlockingQueue/: BlockingQueue.h
atlas_npu/ascendbase/src/Base/CommandParser/: CommandParser.cpp  CommandParser.h
atlas_npu/ascendbase/src/Base/CommonDataType/: CommonDataType.h
atlas_npu/ascendbase/src/Base/ConfigParser/: ConfigParser.cpp  ConfigParser.h
atlas_npu/ascendbase/src/Base/DvppCommon/: DvppCommon.cpp  DvppCommon.h
atlas_npu/ascendbase/src/Base/DvppCommonDevice/: DvppCommonDevice.cpp  DvppCommonDevice.h
atlas_npu/ascendbase/src/Base/ErrorCode/: ErrorCode.cpp  ErrorCode.h
atlas_npu/ascendbase/src/Base/FileManager/: FileManager.cpp  FileManager.h
atlas_npu/ascendbase/src/Base/Framework/ModelProcess/: ModelProcess.cpp  ModelProcess.h
atlas_npu/ascendbase/src/Base/Hdc/: Hdc.cpp  Hdc.h
atlas_npu/ascendbase/src/Base/Log/: Log.cpp  Log.h
atlas_npu/ascendbase/src/Base/MessageQueue/: MessageQueue.h
atlas_npu/ascendbase/src/Base/PointerDeleter/: PointerDeleter.h
atlas_npu/ascendbase/src/Base/ResourceManager/: ResourceManager.cpp  ResourceManager.h
atlas_npu/ascendbase/src/Base/SingleOpProcess/: SingleOpProcess.cpp  SingleOpProcess.h
atlas_npu/ascendbase/src/Base/Statistic/: Statistic.cpp  Statistic.h
atlas_npu/lib/: CMakeLists.txt  build.sh
atlas_npu/lib/atlas800/: atlas800.cpp
atlas_npu/lib/cpu_ops/: ops.cpp
atlas_npu/lib/include/: atlas800.h  atlas800_extern.h  ops.h
atlas_npu/lib/t_invasive/: tbase.h  tlib.cpp  tlib.h
cmake/: executor.cmake
cnn_ctc_sx/: cnn_ctc.prototxt  setup.config
core/include/: cpu_device.h  node.hpp
examples/: CMakeLists.txt  atlas_run.cpp
executor/include/: node_ops.hpp
executor/lib/: node_ops.cpp
executor/operator/atlas/: atlas.cpp  config_parser.cpp  config_parser.h
executor/plugin/: init.cpp
operator/include/operator/: atlas.hpp  atlas_param.hpp
operator/operator/: atlas.cpp
operator/plugin/: init.cpp
resnet_50/: setup.config
resnet_50/model/: ResNet-50-model.prototxt
tools/: CMakeLists.txt
tools/plugin/serializer/caffe/: caffe_serializer.cpp  te_caffe.proto
